[package]
name = "ripmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tungstenite = "0.18.0"
regex = "1.7.1"
lazy_static = "1.4.0"
clap = { version = "4.1.2", features = ["derive"] }
resolve-path = "0.1.0"
